Trying to fix the IAEGraph since it is not rendering on mobile view

--- a/frontend/src/components/statistics/income-vs-expense/IncomeVSExpense.scss
+++ b/frontend/src/components/statistics/income-vs-expense/IncomeVSExpense.scss
@@ -29,6 +29,7 @@
     
     .chart-div {
         grid-row: 1/3;
+        width: 100%;
         background-color: rgb(238, 238, 238);
         margin-bottom: 10px;
         border-radius: 10px;
